Support for facilitating creating a read-side Cassandra table
As highlighted in lagom/activator-lagom-java-chirper#24, making sure that a
read-side table is (eventually) created can be challenging. In particular, users
need to ensure that the create table statement is retried if Cassandra isn't
available.

This commit addresses the problem by encapsulating the retry logic in a new API
class: `CassandraReadSideTableCreator`. Both the number of attempts and the
interval between each attempt is configurable.

--- a/persistence/src/main/resources/reference.conf
+++ b/persistence/src/main/resources/reference.conf
@@ -160,7 +160,16 @@ lagom.persistence.read-side {
     # Set the protocol version explicitly, should only be used for compatibility testing.
     # Supported values: 3, 4
     protocol-version = ""
-    
+
+    create-table {
+      # Max attempts that will be tried to successfully execute a create table statement (a 
+      # negative number means it will be tried until it succeeds). The configuration key 
+      # `retry-backoff-interval` defines the interval waited between each retry.
+      retries = -1
+
+      # Interval waited between each retry.
+      retry-backoff-interval = 2 seconds  
+    }
   }
 
   # Exponential backoff for failures in CassandraReadSideProcessor    
