--- a/persistence/src/main/resources/reference.conf
+++ b/persistence/src/main/resources/reference.conf
@@ -124,7 +124,11 @@ lagom.persistence.read-side {
     
     # Maximum size of result set
     max-result-size = 50001
-    
+
+    # Max delay of the ExponentialReconnectionPolicy that is used when reconnecting
+    # to the Cassandra cluster
+    reconnect-max-delay = 30s
+
     # Cassandra driver connection pool settings
     # Documented at https://datastax.github.io/java-driver/features/pooling/
     connection-pool {
