--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/pom.xml
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/pom.xml
@@ -12,6 +12,7 @@
         <module>${service2Name}-api</module>
         <module>${service2Name}-impl</module>
         <module>integration-tests</module>
+        <module>cassandra-config</module>
     </modules>
 
     <build>
