--- a/persistence/src/main/resources/reference.conf
+++ b/persistence/src/main/resources/reference.conf
@@ -191,6 +191,13 @@ lagom.defaults.persistence.read-side.cassandra {
 }
 #//#persistence-read-side
 
+# Cluster distribution settings
+lagom.persistence.cluster.distribution {
+
+  # Each entity is pinged at this interval. Each node will ping this often, so this interval can be quite long.
+  ensure-active-interval = 30s
+}
+
 cassandra-journal {
   event-adapters.aggregate-tagger = com.lightbend.lagom.internal.persistence.AggregateEventTagger
   event-adapter-bindings {
@@ -207,6 +214,7 @@ akka.actor {
     "com.lightbend.lagom.javadsl.persistence.PersistentEntity$InvalidCommandException" = lagom-persistence
     "com.lightbend.lagom.javadsl.persistence.PersistentEntity$UnhandledCommandException" = lagom-persistence
     "com.lightbend.lagom.javadsl.persistence.PersistentEntity$PersistException" = lagom-persistence
+    "com.lightbend.lagom.internal.persistence.cluster.ClusterDistribution$EnsureActive" = lagom-persistence
   }
   serialization-identifiers {
     "com.lightbend.lagom.internal.persistence.protobuf.PersistenceMessageSerializer" = 1000001
