--- a/dev/maven-plugin/src/maven-test/start-all/pom.xml
+++ b/dev/maven-plugin/src/maven-test/start-all/pom.xml
@@ -65,6 +65,11 @@
                 <version>${lagom.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.typesafe.akka</groupId>
+                <artifactId>akka-stream-kafka_${scala.binary.version}</artifactId>
+                <version>0.11</version>
+            </dependency>
+            <dependency>
                 <groupId>com.lightbend.lagom</groupId>
                 <artifactId>lagom-logback_${scala.binary.version}</artifactId>
                 <version>${lagom.version}</version>
