--- a/kafka-broker/src/main/resources/reference.conf
+++ b/kafka-broker/src/main/resources/reference.conf
@@ -1,9 +1,15 @@
 play.modules.enabled += com.lightbend.lagom.internal.broker.kafka.KafkaModule
+play.modules.enabled += com.lightbend.lagom.internal.broker.kafka.ServicePublisherModule
 
 lagom.broker.defaults.kafka {
   # See {lagom.broker.kafka.brokers} for documentation about this
   # configuration key.
   brokers = "localhost:9092"
+
+  consumer {
+  	batching-size = 20
+  	batching-interval = 5 seconds
+  }
 }
 
 lagom.broker.kafka {
