Documented configuration key for managing consumer's batching size and interval

--- a/kafka-broker/src/main/resources/reference.conf
+++ b/kafka-broker/src/main/resources/reference.conf
@@ -7,7 +7,17 @@ lagom.broker.defaults.kafka {
   brokers = "localhost:9092"
 
   consumer {
+  	# Number of messages batched together by the consumer before the related messages'
+  	# offsets are committed to Kafka.
+  	# By increasing the batching-size you are trading speed with the risk of having
+  	# to re-process a larger number of messages if a failure occurs.
+  	# The value provided must be strictly greater than zero.
   	batching-size = 20
+  	# Interval of time waited by the consumer before the currently batched messages'
+  	# offsets are committed to Kafka.
+  	# This parameter is useful to ensure that messages' offsets are always committed
+  	# within a fixed amount of time.
+  	# The value provided must be strictly greater than zero.
   	batching-interval = 5 seconds
   }
 }
