Clustered read side integration tests

--- a/persistence/src/main/resources/reference.conf
+++ b/persistence/src/main/resources/reference.conf
@@ -179,7 +179,14 @@ lagom.persistence.read-side {
     # additional random delay is based on this factor
     random-factor = 0.2
   }
-  
+
+  # The amount of time that a node should wait for the global prepare callback to execute
+  global-prepare-timeout = 20s
+
+  # Specifies that the read side processors should run on cluster nodes with a specific role.
+  # If the role is not specified (or empty) all nodes in the cluster are used.
+  run-on-role = ""
+
   # The Akka dispatcher to use for read-side actors and tasks.
   use-dispatcher = "lagom.persistence.dispatcher"
 }
