Kafka Maven integration (but test isn't working yet)

--- a/dev/maven-plugin/src/maven-test/start-all/integration-test/src/test/resources/application.conf
+++ b/dev/maven-plugin/src/maven-test/start-all/integration-test/src/test/resources/application.conf
@@ -1,1 +1,4 @@
 # Because the client factory needs it
+
+# For testing purposes, disable batching on the consumer.
+lagom.broker.kafka.consumer.batching-size = 1
