--- a/dev/maven-plugin/src/maven-test/start-all/pom.xml
+++ b/dev/maven-plugin/src/maven-test/start-all/pom.xml
@@ -66,6 +66,11 @@
             </dependency>
             <dependency>
                 <groupId>com.lightbend.lagom</groupId>
+                <artifactId>lagom-javadsl-kafka-broker_${scala.binary.version}</artifactId>
+                <version>${lagom.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.lightbend.lagom</groupId>
                 <artifactId>lagom-logback_${scala.binary.version}</artifactId>
                 <version>${lagom.version}</version>
             </dependency>
