--- a/dev/maven-plugin/src/maven-test/start-all/helloworld-impl/pom.xml
+++ b/dev/maven-plugin/src/maven-test/start-all/helloworld-impl/pom.xml
@@ -26,6 +26,10 @@
         </dependency>
         <dependency>
             <groupId>com.lightbend.lagom</groupId>
+            <artifactId>lagom-javadsl-kafka-broker_${scala.binary.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.lightbend.lagom</groupId>
             <artifactId>lagom-logback_${scala.binary.version}</artifactId>
         </dependency>
         <dependency>
