--- a/dev/maven-plugin/src/maven-test/start-all/integration-test/pom.xml
+++ b/dev/maven-plugin/src/maven-test/start-all/integration-test/pom.xml
@@ -28,6 +28,10 @@
         </dependency>
         <dependency>
             <groupId>com.lightbend.lagom</groupId>
+            <artifactId>lagom-javadsl-kafka-broker_${scala.binary.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.lightbend.lagom</groupId>
             <artifactId>lagom-logback_${scala.binary.version}</artifactId>
             <scope>test</scope>
         </dependency>
