JDBC persistence tests

--- a/persistence-jdbc/src/main/resources/play/reference-overrides.conf
+++ b/persistence-jdbc/src/main/resources/play/reference-overrides.conf
@@ -14,3 +14,6 @@ jdbc-snapshot-store.slick {
 }
 
 db.jndiName = "DefaultDS"
+
+akka.persistence.journal.plugin = jdbc-journal
+akka.persistence.snapshot-store.plugin = jdbc-snapshot-store
