--- a/persistence-jdbc/src/main/resources/reference.conf
+++ b/persistence-jdbc/src/main/resources/reference.conf
@@ -48,10 +48,14 @@ lagom.persistence.read-side.jdbc {
 
   slick {
     driver = "slick.driver.H2Driver$"
-    db {
-      jndiName = "DefaultDS"
-    }
+    jndiName = "DefaultDS"
   }
 
+}
 
+jdbc-journal {
+  event-adapters.aggregate-tagger = com.lightbend.lagom.internal.persistence.AggregateEventTagger
+  event-adapter-bindings {
+    "com.lightbend.lagom.javadsl.persistence.AggregateEvent" = aggregate-tagger
+  }
 }
