Abstracted multi-jvm persistence tests and added JDBC ones

--- a/persistence-jdbc/src/main/resources/reference.conf
+++ b/persistence-jdbc/src/main/resources/reference.conf
@@ -1,5 +1,7 @@
 play.modules.enabled += com.lightbend.lagom.javadsl.persistence.jdbc.JdbcPersistenceModule
 
+db.default.jndiName=DefaultDS
+
 lagom.persistence.jdbc {
   # Whether tables should be autocreated as needed
   autocreate-tables = true
