Started on documentation

--- a/persistence-jdbc/src/main/resources/play/reference-overrides.conf
+++ b/persistence-jdbc/src/main/resources/play/reference-overrides.conf
@@ -1,16 +1,21 @@
-jdbc-journal.slick {
+jdbc-defaults.slick {
   driver = "slick.driver.H2Driver$"
   jndiName = "DefaultDS"
+}
+
+jdbc-journal.slick {
+  driver = ${jdbc-defaults.slick.driver}
+  jndiName = ${jdbc-defaults.slick.jndiName}
 }
 
 jdbc-read-journal.slick {
-  driver = "slick.driver.H2Driver$"
-  jndiName = "DefaultDS"
+  driver = ${jdbc-defaults.slick.driver}
+  jndiName = ${jdbc-defaults.slick.jndiName}
 }
 
 jdbc-snapshot-store.slick {
-  driver = "slick.driver.H2Driver$"
-  jndiName = "DefaultDS"
+  driver = ${jdbc-defaults.slick.driver}
+  jndiName = ${jdbc-defaults.slick.jndiName}
 }
 
 akka.persistence.journal.plugin = jdbc-journal
