--- a/persistence-jdbc/src/main/resources/reference.conf
+++ b/persistence-jdbc/src/main/resources/reference.conf
@@ -1,5 +1,6 @@
 play.modules.enabled += com.lightbend.lagom.javadsl.persistence.jdbc.JdbcPersistenceModule
 
+# Configure the default database to be bound to JNDI
 db.default.jndiName=DefaultDS
 
 lagom.persistence.jdbc {
@@ -48,9 +49,14 @@ lagom.persistence.read-side.jdbc {
     }
   }
 
+  # Slick configuration
   slick {
-    driver = "slick.driver.H2Driver$"
-    jndiName = "DefaultDS"
+
+    # The Slick driver
+    driver = ${jdbc-defaults.slick.driver}
+
+    # The JNDI name to use
+    jndiName = ${jdbc-defaults.slick.jndiName}
   }
 
 }
