--- a/persistence-jdbc/src/main/resources/reference.conf
+++ b/persistence-jdbc/src/main/resources/reference.conf
@@ -1,30 +1,40 @@
 play.modules.enabled += com.lightbend.lagom.javadsl.persistence.jdbc.JdbcPersistenceModule
 
+//#persistence
 # Configure the default database to be bound to JNDI
 db.default.jndiName=DefaultDS
 
 lagom.persistence.jdbc {
-  # Whether tables should be autocreated as needed
-  autocreate-tables = true
 
   # Configuration for creating tables
   create-tables {
+
+    # Whether tables should be created automatically as needed
+    auto = true
+
     # How long to wait for tables to be created, before failing
     timeout = 20s
+
     # The cluster role to create tables from
     run-on-role = ""
+
     # Exponential backoff for failures configuration for creating tables
     failure-exponential-backoff {
+
       # minimum (initial) duration until processor is started again
       # after failure
       min = 3s
+
       # the exponential back-off is capped to this duration
       max = 30s
+
       # additional random delay is based on this factor
       random-factor = 0.2
     }
   }
 }
+//#persistence
+
 
 lagom.persistence.read-side.jdbc {
 
