Documented new read-side support and JDBC

--- a/persistence-jdbc/src/main/resources/reference.conf
+++ b/persistence-jdbc/src/main/resources/reference.conf
@@ -1,6 +1,16 @@
 play.modules.enabled += com.lightbend.lagom.javadsl.persistence.jdbc.JdbcPersistenceModule
 
 //#persistence
+# Defaults to use for each Akka persistence plugin
+jdbc-defaults.slick {
+
+  # The driver to use
+  driver = "slick.driver.H2Driver$"
+
+  # The JNDI name
+  jndiName = "DefaultDS"
+}
+
 # Configure the default database to be bound to JNDI
 db.default.jndiName=DefaultDS
 
