Message Broker documentation

--- a/kafka-broker/cassandra-store/src/main/resources/reference.conf
+++ b/kafka-broker/cassandra-store/src/main/resources/reference.conf
@@ -1,5 +1,6 @@
 play.modules.enabled += com.lightbend.lagom.internal.broker.kafka.cassandra.OffsetStoreModule
 
+#//#kafka-cassandra-store
 # Configuration for the table that stores the read-side offset of events published to the message broker. 
 lagom.broker.kafka.offset-store {
   # The name of the table
@@ -12,3 +13,4 @@ lagom.broker.kafka.offset-store {
   # Futhermore, it is mandatory that there aren't two services with the same prefix.
   primary-key-prefix = ""  
 }
+#//#kafka-cassandra-store
