--- a/dev/maven-plugin/src/maven-test/start-all/pom.xml
+++ b/dev/maven-plugin/src/maven-test/start-all/pom.xml
@@ -25,6 +25,8 @@
                     <serviceLocatorPort>16101</serviceLocatorPort>
                     <serviceGatewayPort>16102</serviceGatewayPort>
                     <cassandraPort>16103</cassandraPort>
+                    <kafkaPort>16104</kafkaPort>
+                    <zookeeperPort>16105</zookeeperPort>
                 </configuration>
             </plugin>
             <plugin>
