--- a/dev/kafka-server/src/main/resources/kafka-server.properties
+++ b/dev/kafka-server/src/main/resources/kafka-server.properties
@@ -24,6 +24,14 @@ broker.id=0
 # Topics are automatically created when a message is published
 auto.create.topics.enable=true
 
+# Offsets topic replication factor
+# Since we only have one broker in dev mode and test, the replication factor for
+# the offsets topic should be 1.
+offsets.topic.replication.factor=1
+
+# We don't need more than one partition in dev mode
+offsets.topic.num.partitions=1
+
 ############################# Socket Server Settings #############################
 
 # Note that because the Kafka running port can be changed from the build,
