--- a/kafka-broker/src/main/resources/reference.conf
+++ b/kafka-broker/src/main/resources/reference.conf
@@ -6,13 +6,14 @@ lagom.broker.defaults.kafka {
   brokers = "localhost:9092"
 }
 
+#//#kafka-broker
 lagom.broker.kafka {
   # The URLs of the Kafka brokers. Separate each URL with a comma.
   brokers = ${lagom.broker.defaults.kafka.brokers}
 
   client {
-  	default {
-  	  # Exponential backoff for failures in CassandraReadSideProcessor    
+    default {
+      # Exponential backoff for failures     
       failure-exponential-backoff {
         # minimum (initial) duration until processor is started again
         # after failure
@@ -35,18 +36,19 @@ lagom.broker.kafka {
       failure-exponential-backoff = ${lagom.broker.kafka.client.default.failure-exponential-backoff}
 
       # Number of messages batched together by the consumer before the related messages'
-  	  # offsets are committed to Kafka.
-  	  # By increasing the batching-size you are trading speed with the risk of having
-  	  # to re-process a larger number of messages if a failure occurs.
-  	  # The value provided must be strictly greater than zero.
+      # offsets are committed to Kafka.
+      # By increasing the batching-size you are trading speed with the risk of having
+      # to re-process a larger number of messages if a failure occurs.
+      # The value provided must be strictly greater than zero.
   	  batching-size = 20
 
       # Interval of time waited by the consumer before the currently batched messages'
-  	  # offsets are committed to Kafka.
-  	  # This parameter is useful to ensure that messages' offsets are always committed
-  	  # within a fixed amount of time.
-  	  # The value provided must be strictly greater than zero.
+      # offsets are committed to Kafka.
+      # This parameter is useful to ensure that messages' offsets are always committed
+      # within a fixed amount of time.
+      # The value provided must be strictly greater than zero.
   	  batching-interval = 5 seconds
     }
   }
 }
+#//#kafka-broker
