increase akka.kafka.consumer.max-wakeups in tests

--- a/kafka-broker/src/test/resources/application.conf
+++ b/kafka-broker/src/test/resources/application.conf
@@ -7,3 +7,6 @@ lagom.broker.kafka.producer.failure-exponential-backoff {
   min = 100 milliseconds
   max = 200 milliseconds
 }
+
+#akka.kafka.consumer.wakeup-timeout = 3s
+akka.kafka.consumer.max-wakeups = 20
