--- a/persistence/src/main/resources/reference.conf
+++ b/persistence/src/main/resources/reference.conf
@@ -17,22 +17,22 @@ lagom.persistence {
   # events. Snapshots are used to reduce recovery times.
   # It may be configured to "off" to disable snapshots.
   snapshot-after = 100
-  
+
   # A persistent entity is passivated automatically if it does not receive 
   # any messages during this timeout. Passivation is performed to reduce
   # memory consumption. Objects referenced by the entity can be garbage
   # collected after passivation. Next message will activate the entity
   # again, which will recover its state from persistent storage.  
   passivate-after-idle-timeout = 120s
-  
+
   # Specifies that entities run on cluster nodes with a specific role.
   # If the role is not specified (or empty) all nodes in the cluster are used.
   # The entities can still be accessed from other nodes.
   run-entities-on-role = ""
-  
+
   # Default timeout for PersistentEntityRef.ask replies.
   ask-timeout = 5s
-  
+
   dispatcher {
     type = Dispatcher
     executor = "thread-pool-executor"
@@ -43,7 +43,7 @@ lagom.persistence {
   }
 }
 #//#persistence  
-  
+
 #//#persistence-read-side
 lagom.persistence.read-side {
 
@@ -52,10 +52,10 @@ lagom.persistence.read-side {
     # minimum (initial) duration until processor is started again
     # after failure
     min = 3s
-    
+
     # the exponential back-off is capped to this duration
     max = 30s
-    
+
     # additional random delay is based on this factor
     random-factor = 0.2
   }
@@ -82,6 +82,7 @@ lagom.persistence.cluster.distribution {
 akka.actor {
   serializers {
     lagom-persistence = "com.lightbend.lagom.internal.persistence.protobuf.PersistenceMessageSerializer"
+    lagom-java-optional = "com.lightbend.lagom.internal.persistence.akkaserializer.OptionalSerializer"
   }
   serialization-bindings {
     "com.lightbend.lagom.javadsl.persistence.CommandEnvelope" = lagom-persistence
@@ -89,9 +90,12 @@ akka.actor {
     "com.lightbend.lagom.javadsl.persistence.PersistentEntity$UnhandledCommandException" = lagom-persistence
     "com.lightbend.lagom.javadsl.persistence.PersistentEntity$PersistException" = lagom-persistence
     "com.lightbend.lagom.internal.persistence.cluster.ClusterDistribution$EnsureActive" = lagom-persistence
+    "java.util.Optional" = lagom-java-optional
   }
   serialization-identifiers {
     "com.lightbend.lagom.internal.persistence.protobuf.PersistenceMessageSerializer" = 1000001
+    "com.lightbend.lagom.internal.persistence.akkaserializer.OptionalSerializer" = 581884278
   }
+
 }
 
