Refactor the service locator holder to expose a future so we don't have to poll to get the locator

--- a/persistence/src/main/resources/reference.conf
+++ b/persistence/src/main/resources/reference.conf
@@ -79,6 +79,8 @@ lagom.persistence.cluster.distribution {
   ensure-active-interval = 30s
 }
 
+akka.logger-startup-timeout = 25s
+
 akka.actor {
   serializers {
     lagom-persistence = "com.lightbend.lagom.internal.persistence.protobuf.PersistenceMessageSerializer"
