Created Maven dependency management pom
Fixes #530

--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/pom.xml
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/pom.xml
@@ -39,6 +39,7 @@
         <dependency>
             <groupId>com.lightbend.lagom</groupId>
             <artifactId>lagom-javadsl-testkit_2.11</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.typesafe.conductr</groupId>
