--- a/dev/maven-plugin/src/maven-test/start-all/helloworld-impl/pom.xml
+++ b/dev/maven-plugin/src/maven-test/start-all/helloworld-impl/pom.xml
@@ -35,6 +35,7 @@
         <dependency>
             <groupId>com.lightbend.lagom</groupId>
             <artifactId>lagom-javadsl-testkit_${scala.binary.version}</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
