Deprecate the Cassandra keyspace build config
See #578

--- a/dev/maven-plugin/src/main/maven/plugin.xml
+++ b/dev/maven-plugin/src/main/maven/plugin.xml
@@ -104,6 +104,7 @@
             <required>false</required>
             <editable>true</editable>
             <description>The keyspace to use for Cassandra.</description>
+            <deprecated>Configure in application.conf instead.</deprecated>
         </parameter>
 
         <parameter>
