Use new Slick 3.2 DB profile classes

--- a/persistence-jdbc/core/src/main/resources/reference.conf
+++ b/persistence-jdbc/core/src/main/resources/reference.conf
@@ -3,7 +3,7 @@
 jdbc-defaults.slick {
 
   # The driver to use
-  driver = "slick.driver.H2Driver$"
+  driver = "slick.jdbc.H2Profile$"
 
   # The JNDI name
   jndiName = "DefaultDS"
