Fail on missing keyspace configuration
- Extend #632 to fully require keyspaces to be configured explicitly in
  application.conf.
- Stop injecting default keyspace configuration in development mode.
- Remove the deprecated development mode keyspace configuration settings
  from the build plugins.

See #578 for more details.

--- a/persistence-cassandra/core/src/main/resources/reference.conf
+++ b/persistence-cassandra/core/src/main/resources/reference.conf
@@ -29,8 +29,8 @@ lagom.persistence.read-side {
     cluster-id = "cas_native"
     cluster-id = ${?CASSANDRA_SERVICE_NAME}
 
-    # Name of the keyspace to be created/used by the read-side session
-    keyspace = ${lagom.defaults.persistence.read-side.cassandra.keyspace}
+    # keyspace must be provided by application.conf
+    keyspace = null
 
     # Parameter indicating whether the read-side keyspace should be auto created
     keyspace-autocreate = true
@@ -180,7 +180,6 @@ lagom.persistence.read-side {
 lagom.defaults.persistence.read-side.cassandra {
   # Port of contact points in the Cassandra cluster
   port = 9042
-  keyspace = "lagom_read"
 }
 #//#persistence-read-side
 
