Include Lombok in the template Java projects (Maven)

--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service1Name__-impl/pom.xml
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service1Name__-impl/pom.xml
@@ -44,6 +44,10 @@
             <groupId>com.typesafe.conductr</groupId>
             <artifactId>${conductr.lib.name}</artifactId>
         </dependency>
+       <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
