Allow Kafka consumers to batch messages
This allows at least once Kakfa consumers to batch messages, by ensuring
that the zip stage of zipping the user flow with the offset doesn't
backpressure on the unzip stage through the offset side of the flow when
the user buffer is batching or otherwise processing messages in
parallel.

--- a/service/core/kafka/client/src/main/resources/reference.conf
+++ b/service/core/kafka/client/src/main/resources/reference.conf
@@ -40,6 +40,13 @@ lagom.broker.kafka {
     consumer {
       failure-exponential-backoff = ${lagom.broker.kafka.client.default.failure-exponential-backoff}
 
+      # The number of offsets that will be buffered to allow the consumer flow to
+      # do its own buffering. This should be set to a number that is at least as
+      # large as the maximum amount of buffering that the consumer flow will do,
+      # if the consumer buffer buffers more than this, the offset buffer will
+      # backpressure and cause the stream to stop.
+      offset-buffer = 100
+
       # Number of messages batched together by the consumer before the related messages'
       # offsets are committed to Kafka.
       # By increasing the batching-size you are trading speed with the risk of having
