--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/src/main/resources/application.conf
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service2Name__-impl/src/main/resources/application.conf
@@ -2,3 +2,22 @@
 # Copyright (C) 2016-2017 Lightbend Inc. <https://www.lightbend.com>
 #
 play.modules.enabled += ${package}.${service2Name}.impl.${service2ClassName}Module
+
+lagom.persistence.ask-timeout = 10s
+
+${service2Name}.cassandra.keyspace = ${service2Name}
+
+## The unusual syntax below is because this file is proccessed by Velocity.
+## We are using Velocity properties to construct a config key name,
+## which is then used in a HOCON substitution.
+##
+## The results, if service2Name = hello, should look like this:
+##
+## cassandra-journal.keyspace = ${hello.cassandra.keyspace}
+## cassandra-snapshot-store.keyspace = ${hello.cassandra.keyspace}
+## lagom.persistence.read-side.cassandra.keyspace = ${hello.cassandra.keyspace}
+##
+## Also note that this comment is a Velocity comment and is not included in the output.
+cassandra-journal.keyspace = ${${service2Name}.cassandra.keyspace}
+cassandra-snapshot-store.keyspace = ${${service2Name}.cassandra.keyspace}
+lagom.persistence.read-side.cassandra.keyspace = ${${service2Name}.cassandra.keyspace}
