--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service1Name__-impl/pom.xml
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/__service1Name__-impl/pom.xml
@@ -44,10 +44,10 @@
             <groupId>com.lightbend.lagom</groupId>
             <artifactId>lagom-javadsl-kafka-broker_2.11</artifactId>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>com.typesafe.conductr</groupId>
             <artifactId>${conductr.lib.name}</artifactId>
-        </dependency>
+        </dependency> -->
        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
