Fix previous commit (build.sbt was formatted but not using scalafmt)

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,6 +5,7 @@ align.openParenCallSite = true
 align.tokens = [ "%", "%%", "=>", "=" ]
 spaces.inImportCurlyBraces = true
 binPack.callSite = true
+binPack.parentConstructors = false
 includeCurlyBraceInSelectChains=true
 optIn.breakChainOnFirstMethodDot = true
 newlines.alwaysBeforeCurlyBraceLambdaParams = false
