Implemented akka-http service gateway (#894)
* Implemented akka-http service gateway

* Add allowed values to serviceGatewayImpl docs

* flow mapAsync parallelism set to 1 (as per feedback akka-team)

(this cherrypick cause some conflicts that were manually resolved)

--- a/dev/maven-plugin/src/main/maven/plugin.xml
+++ b/dev/maven-plugin/src/main/maven/plugin.xml
@@ -193,6 +193,16 @@
             </configuration>
         </parameter>
         <parameter>
+            <name>serviceGatewayImpl</name>
+            <type>java.lang.String</type>
+            <required>false</required>
+            <editable>true</editable>
+            <description>The implementation of the service gateway: "netty" (default) or "akka-http" (experimental).</description>
+            <configuration>
+                <serviceGatewayImpl implementation="java.lang.String" default-value="netty">${service.gateway.impl}</serviceGatewayImpl>
+            </configuration>
+        </parameter>
+        <parameter>
             <name>serviceLocatorEnabled</name>
             <type>boolean</type>
             <required>false</required>
@@ -397,6 +407,9 @@
                 </parameter>
                 <parameter>
                     <name>serviceGatewayPort</name>
+                </parameter>
+                <parameter>
+                    <name>serviceGatewayImpl</name>
                 </parameter>
                 <parameter>
                     <name>serviceLocatorEnabled</name>
