Fix "imports" formatting. Replace command on travis script.

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -9,3 +9,4 @@ binPack.parentConstructors = false
 includeCurlyBraceInSelectChains=true
 optIn.breakChainOnFirstMethodDot = true
 newlines.alwaysBeforeCurlyBraceLambdaParams = false
+importSelectors = singleLine
