Adds docs on compression for scaladsl JSON serialization

--- a/play-json/src/main/resources/reference.conf
+++ b/play-json/src/main/resources/reference.conf
@@ -4,7 +4,7 @@ akka.actor {
   }
 }
 
-
+#//#compress-larger-than
 lagom.serialization.json {
 
   # The serializer will compress the payload if the message class
@@ -14,3 +14,4 @@ lagom.serialization.json {
   compress-larger-than = 1024b
 
 }
+#//#compress-larger-than
