--- a/service/core/client/src/main/resources/reference.conf
+++ b/service/core/client/src/main/resources/reference.conf
@@ -20,6 +20,12 @@ lagom.circuit-breaker {
     # Duration of time in open state after which to attempt to close
     # the circuit, by first entering the half-open state.
     reset-timeout = 15s
+
+    # A whitelist of fqcn of Esxceptions that the CircuitBreaker
+    # should not consider failures. By default all exceptions are
+    # failures
+    #
+    exception-whitelist = []
   }
 }
 #//#circuit-breaker-default
